# fitter

./: README.rst  pyproject.toml  requirements.txt
src/fitter/: fitter.py  histfit.py  main.py
test/: run_tests.py  test_main.py
