[tool.poetry]
name = "fitter"
version = "1.8.0"  # Bumped version for numpy 2 compatibility
description = "A tool to fit data to many distributions and get the best one(s)"
authors = ["Thomas Cokelaer <cokelaer@gmail.com>"]
license = "GPL"
readme = "README.rst"
repository = "https://github.com/cokelaer/fitter"
documentation = "https://fitter.readthedocs.io"
keywords = ["fit", "distribution", "fitting", "scipy", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = ">=2.0.0"
scipy = ">=1.10.0"
matplotlib = ">=3.5.0"
pandas = ">=1.3.0"
pytest = {version = ">=7.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.0.0"
pre-commit = ">=3.0.0"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fitter = "fitter.main:main"
